<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="notifications_category"
        app:title="Notifications"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/reminder_pref"
            android:summary="Schedule the app to remind you to learn to skill up faster and conquer your goals."
            android:title="Reminder to learn Notification"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="theme_category"
        app:title="Theme"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/toggle_theme_pref"
            android:summary="Change app theme to dark theme."
            android:title="Dark Mode"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="Help"
        app:iconSpaceReserved="false">

        <Preference
            app:key="@string/feedback_pref"
            app:summary="Report issues or suggest new features"
            app:iconSpaceReserved="false"
            app:title="Send feedback"/>
    </PreferenceCategory>




</PreferenceScreen>