<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.CategoriesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/businessCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_business"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/developmentCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/development"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_development"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/designCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_design"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/financeAccCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/financeAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_finance_accounting"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/healthFitCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/healthFit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_health_fitness"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itSoftCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/itSoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_it_software"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lifestyleCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/lifestyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_lifestyle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/marketingCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/marketing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_marketing"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/musicCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_music"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/officeProCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/officePro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_office_productivity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/personalDevCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/personalDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_personal_development"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/photoVidCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/photoVid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_photography_video"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/teachingAcadeCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/teachingAcade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/text_teaching_academics"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>